--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,33 +5,66 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_load_characters"
+            android:icon="@drawable/ic_contacts_black_24dp"
+            android:title="Load Character"/>
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="Character Tabs">
         <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_home"
+                    android:icon="@drawable/ic_home_black_24dp"
+                    android:title="Home" />
+                <item
+                    android:id="@+id/nav_stats"
+                    android:icon="@drawable/ic_list_black_24dp"
+                    android:title="Stats" />
+                <item
+                    android:id="@+id/nav_bio"
+                    android:icon="@drawable/ic_import_contacts_black_24dp"
+                    android:title="Biography"/>
+                <item
+                    android:id="@+id/nav_spells"
+                    android:icon="@drawable/ic_book_black_24dp"
+                    android:title="Spells" />
+                <item
+                    android:id="@+id/nav_inventory"
+                    android:icon="@drawable/ic_account_balance_wallet_black_24dp"
+                    android:title="Inventory" />
+            </group>
+        </menu>
+    </item>
+
+    <item android:title="Information Pages">
+        <menu>
+            <group android:checkableBehavior="single">
+                <item
+                    android:id="@+id/nav_info_races"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="Races" />
+                <item
+                    android:id="@+id/nav_info_classes"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="Classes" />
+                <item
+                    android:id="@+id/nav_info_backgrounds"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="Backgrounds" />
+                <item
+                    android:id="@+id/nav_info_spells"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="Spells" />
+                <item
+                    android:id="@+id/nav_info_gear"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="Gear" />
+                <item
+                    android:id="@+id/nav_info_languages"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="Languages" />
+            </group>
         </menu>
     </item>
 
