--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,23 +16,23 @@
                 <item
                     android:id="@+id/nav_home"
                     android:icon="@drawable/ic_home_black_24dp"
-                    android:title="Home" />
+                    android:title="@string/nav_menu_home_label" />
                 <item
                     android:id="@+id/nav_stats"
                     android:icon="@drawable/ic_list_black_24dp"
-                    android:title="Stats" />
+                    android:title="@string/nav_menu_stats_label" />
                 <item
                     android:id="@+id/nav_bio"
                     android:icon="@drawable/ic_import_contacts_black_24dp"
-                    android:title="Biography"/>
+                    android:title="@string/nav_menu_bio_label"/>
                 <item
                     android:id="@+id/nav_spells"
                     android:icon="@drawable/ic_book_black_24dp"
-                    android:title="Spells" />
+                    android:title="@string/nav_menu_spells_label" />
                 <item
                     android:id="@+id/nav_inventory"
                     android:icon="@drawable/ic_account_balance_wallet_black_24dp"
-                    android:title="Inventory" />
+                    android:title="@string/nav_menu_inventory_label" />
             </group>
         </menu>
     </item>
@@ -43,27 +43,27 @@
                 <item
                     android:id="@+id/nav_info_races"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="Races" />
+                    android:title="@string/nav_menu_races_label" />
                 <item
                     android:id="@+id/nav_info_classes"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="Classes" />
+                    android:title="@string/nav_menu_classes_label" />
                 <item
                     android:id="@+id/nav_info_backgrounds"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="Backgrounds" />
+                    android:title="@string/nav_menu_background_label" />
                 <item
                     android:id="@+id/nav_info_spells"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="Spells" />
+                    android:title="@string/nav_menu_spell_label" />
                 <item
                     android:id="@+id/nav_info_gear"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="Gear" />
+                    android:title="@string/nav_menu_gear_label" />
                 <item
                     android:id="@+id/nav_info_languages"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="Languages" />
+                    android:title="@string/nav_menu_languages_label" />
             </group>
         </menu>
     </item>
